FIXED OVERFLOW ISSUE

--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ body {
     font-weight: 400;
     font-size: 16px;
     line-height: 1.7;
-    overflow-y: hidden;
+    overflow-x: hidden;
     width: 100vw;
     color: #777;
     padding: 30px;
@@ -26,7 +26,6 @@ body {
 
 .header {
     height: 95vh;
-    width: 100vw;
     overflow: hidden;
     background-image: linear-gradient( 
         to bottom right, 
